Fix title truncation on events page

--- a/src/app/components/events-list-item/_index.scss
+++ b/src/app/components/events-list-item/_index.scss
@@ -33,13 +33,13 @@
 
     .title {
       margin: 0;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
 
       a {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
         transition: color $hover-duration-quick ease-in-out;
       }
     }
@@ -131,7 +131,9 @@
     .details {
 
       .title {
-        -webkit-line-clamp: 4;
+        a {
+          -webkit-line-clamp: 4;
+        }
       }
 
       .excerpt p {
